src/test/ui/borrowck/borrowck-consume-unsize-vec.stderr
error[E0382]: use of moved value: `b`
  --> $DIR/borrowck-consume-unsize-vec.rs:8:13
   |
LL |     consume(b);
   |             - value moved here
LL |     consume(b);
   |             ^ value used here after move
   |
   = note: move occurs because `b` has type `std::boxed::Box<[i32; 5]>`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
